commit authorization jwt
