# apis/checkout/server/model/request/auth.go
@@ -1,0 +1,14 @@
+package request
+
+/*****
+struct for posts
+******/
+
+type PostAuthLogin struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+/*****
+struct for posts
+******/
