# apis/checkout/server/model/response/auth.go
@@ -1,0 +1,13 @@
+package response
+
+/*****
+struct for posts
+******/
+
+type PostAuthLogin struct {
+	Token string `json:"token"`
+}
+
+/*****
+struct for posts
+******/
