# apis/checkout/server/server.go
@@ -4,6 +4,8 @@ import (
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/luancpereira/APICheckout/apis/checkout/server/routes"
+	commonsAuth "github.com/luancpereira/APICheckout/apis/commons/auth"
+	commonsConfig "github.com/luancpereira/APICheckout/apis/commons/config"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -31,7 +33,7 @@ func SetupSwagger(router *gin.Engine) {
 
 func NewServer() (s Server) {
 
-	s.Port = "9000"
+	s.Port = commonsConfig.SERVER_PORT
 	s.Router = gin.Default()
 
 	SetupCORS(s.Router)
@@ -51,11 +53,17 @@ func (s Server) Start() {
 
 func (s Server) setupRouterV1() {
 	freeRoutes := s.Router.Group("")
+	authRoutes := s.Router.Group("").Use(commonsAuth.JWT{}.Middleware())
+
+	user := routes.User{}
+	freeRoutes.POST("/api/users", user.PostUser)
+
+	auth := routes.Auth{}
+	freeRoutes.POST("/api/auth/login", auth.PostLogin)
 
 	checkout := routes.Checkout{}
-
-	freeRoutes.POST("/api/checkout", checkout.InsertTransaction)
-	freeRoutes.GET("/api/checkout/transactions/country/:country", checkout.GetList)
-	freeRoutes.GET("/api/checkout/transactions/:transactionID/country/:country", checkout.GetByID)
+	authRoutes.POST("/api/checkout", checkout.InsertTransaction)
+	authRoutes.GET("/api/checkout/transactions/country/:country", checkout.GetList)
+	authRoutes.GET("/api/checkout/transactions/:transactionID/country/:country", checkout.GetByID)
 
 }
