# apis/commons/server/model/response/response.go
@@ -1,0 +1,19 @@
+package response
+
+type List struct {
+	Pagination Pagination `json:"pagination"`
+	Data       any        `json:"data"`
+}
+
+type Pagination struct {
+	Total int64 `json:"total"`
+}
+
+type Created struct {
+	ID int64 `json:"id"`
+}
+
+type Exception struct {
+	Key     string `json:"key"`
+	Message string `json:"message"`
+}
